# kannabot

./: .replit  README.md  main.py  pyproject.toml
arquivos_json/action_files/: bite.json  bonk.json  cuddle.json  highfive.json  hug.json  kiss.json  lick.json  pat.json  punch.json  push.json  shy.json  slap.json  tickle.json  wave.json
arquivos_json/config_files/: log_buttons.json
arquivos_json/text_files/: labels.json  mensagens_erro.json
data/arquivos_json/action_files/: hug.json  kiss.json  pat.json  poke.json  push.json  slap.json  stare.json  wave.json
data/arquivos_json/config_files/: grupos_autorizados.json  log_buttons.json
modules/: .construcao_acoes.py.107914326~  __init__.py  construcao_acoes.py  shared.py
modules/_config/: checagem_autorizacao.py  erros_utilizacao.py  mensagem_usuario.py  verificar_button.py
modules/emotes/: construcao_acoes.py  open_json.py
src/: __init__.py  shared.py
src/_config/: checagem_autorizacao.py  erros_utilizacao.py
src/emotes/: construcao_acoes.py  open_json.py  verificar_button.py
